new webgl build

--- a/WebGL Builds/index.html
+++ b/WebGL Builds/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WebGL Builds.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGL Builds.data",
-        frameworkUrl: buildUrl + "/WebGL Builds.framework.js",
-        codeUrl: buildUrl + "/WebGL Builds.wasm",
+        dataUrl: buildUrl + "/WebGL Builds.data.br",
+        frameworkUrl: buildUrl + "/WebGL Builds.framework.js.br",
+        codeUrl: buildUrl + "/WebGL Builds.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Space Tycoon Clicker",
